--- a/Menu_Styling.css
+++ b/Menu_Styling.css
@@ -9,6 +9,10 @@
     display: table;
   }
 
+body{
+    background-color: rgb(229, 228, 228);
+}
+
 /* For mobile phones: */
 @media only screen and (min-width: 100px) {
     /* For tablets: */
