--- a/Menu_Styling.css
+++ b/Menu_Styling.css
@@ -124,6 +124,22 @@ body{
         font-family: Verdana;
         font-size: 15px;
     
-    }
+    }*/
 
-        
+/*footer*/
+footer{
+    position:fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+    height: 50px;
+    display: flex;
+    background-color: #64a264;
+    
+    .logo img{
+        height:40px;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+      }
+}    
