--- a/Menu_Styling.css
+++ b/Menu_Styling.css
@@ -10,6 +10,7 @@
   }
 
 body{
+    margin:0;
     background-color: rgb(229, 228, 228);
 }
 
@@ -33,6 +34,7 @@ body{
         #name-menu{
             display: flex;
             flex-direction: column;
+            height: 10vh;
     
         }
         .name{
@@ -71,6 +73,7 @@ body{
         align-items: center;
         padding-left: 10px;
         padding-right: 10px;
+        height: 10vh;
     }
     .name{
         flex-grow: 8;
@@ -128,18 +131,26 @@ body{
 
 /*footer*/
 footer{
-    position:fixed;
+    position:sticky;
     bottom:0;
     left:0;
     width:100%;
-    height: 50px;
+    height: 9vh;
     display: flex;
     background-color: #64a264;
+    flex-shrink:0;
+    
     
     .logo img{
-        height:40px;
+        height:6vh;
         position: absolute;
-        top: 10%;
+        top: 20%;
         left: 50%;
       }
-}    
+}   
+main{
+    display:block;
+    margin-left:2%;
+    margin-right:2%;
+    margin-bottom:81vh;
+}
