--- a/asset/mobile_style.css
+++ b/asset/mobile_style.css
@@ -36,32 +36,57 @@ body{
             flex-direction: column;
             height: 22vh;
             position: relative;
+            margin-left: 5%;
+            margin-right: 5%;
     
         }
         .name{
             text-align: left;
-            font-family: Verdana;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 6vh;
             color: #00b900;
             margin: 0;
         }
         .menu-item{
             text-align: left;
-            font-family: Verdana;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 3vh;
         }
+    
+        main{
+            display:inline-block;
+            margin:0;
+            margin-left:10%;
+            margin-right:10%;
+            position: relative;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            line-height: 30px;
+            min-height: 69vh;
+        
+            .about-img{
+                width: 320px;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 10px;
+            }
+            .about-text{
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+            }
+        }
     }
-  
+    
 /*footer*/
 footer{
     position:sticky;
-    bottom:0;
     left:0;
     width:100%;
     height: 9vh;
     display: flex;
     background-color: #64a264;
     flex-shrink:0;
+    bottom:0;
+    
     
     
     .logo img{
@@ -70,11 +95,4 @@ footer{
         top: 20%;
         left: 50%;
       }
-}   
-main{
-    display:inline-block;
-    margin-left:2%;
-    margin-right:2%;
-    margin-bottom:82vh;
-    position: relative;
-}
+} 
