--- a/asset/pc_style.css
+++ b/asset/pc_style.css
@@ -33,14 +33,14 @@ body{
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding-left: 10px;
-        padding-right: 10px;
         height: 9vh;
+        margin-left: 5%;
+        margin-right: 5%;
     }
     .name{
         flex-grow: 8;
         text-align: left;
-        font-family: Verdana;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 6vh;
         color: #00b900;
         margin: 0;
@@ -48,12 +48,34 @@ body{
     .menu-item{
         flex-grow: 0.3;
         text-align: right;
-        font-family: Verdana;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 3vh;
     
     }
+
+    main{
+        display:inline-block;
+        margin:0;
+        margin-left:10%;
+        margin-right:10%;
+        /*margin-bottom:82vh;*/
+        position: relative;
+        line-height: 30px;
+        min-height: 82vh;
+    
+        .about-img{
+            width: 320px;
+            float: left;
+            margin-right: 10px;
+            margin-top: 20px;
+        }
+        .about-text{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+    }
   }
   
+
 
 /*footer*/
 footer{
@@ -65,6 +87,7 @@ footer{
     display: flex;
     background-color: #64a264;
     flex-shrink:0;
+    margin-top: 
     
     
     .logo img{
@@ -74,10 +97,3 @@ footer{
         left: 50%;
       }
 }   
-main{
-    display:inline-block;
-    margin-left:2%;
-    margin-right:2%;
-    margin-bottom:82vh;
-    position: relative;
-}
