--- a/asset/mobile_style.css
+++ b/asset/mobile_style.css
@@ -34,7 +34,7 @@ body{
         #name-menu{
             display: flex;
             flex-direction: column;
-            height: 22vh;
+            height: 96px;
             position: relative;
             margin-left: 5%;
             margin-right: 5%;
@@ -43,14 +43,14 @@ body{
         .name{
             text-align: left;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 6vh;
+            font-size: 32px;
             color: #00b900;
             margin: 0;
         }
         .menu-item{
             text-align: left;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 3vh;
+            font-size: 16px;
         }
     
         main{
@@ -61,14 +61,14 @@ body{
             position: relative;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             line-height: 30px;
-            min-height: 69vh;
+            min-height: calc(100vh - 136px);
         
             .about-img{
                 width: 320px;
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                margin-top: 10px;
+                margin-top: 25px;
             }
             .about-text{
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -77,22 +77,21 @@ body{
     }
     
 /*footer*/
-footer{
+#footer{
     position:sticky;
+    bottom:0;
     left:0;
     width:100%;
-    height: 9vh;
+    height: 40px;
     display: flex;
     background-color: #64a264;
     flex-shrink:0;
-    bottom:0;
-    
-    
-    
-    .logo img{
-        height:6vh;
-        position: absolute;
-        top: 20%;
-        left: 50%;
-      }
-} 
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
+.logo img{
+    display: flex;
+    height: 30px;
+    margin-top: 5px;
+  }
