--- a/assets/mobile_style.css
+++ b/assets/mobile_style.css
@@ -7,9 +7,9 @@
     content: "";
     clear: both;
     display: table;
-  }
+}
 
-body{
+body {
     margin:0;
     background-color: rgb(229, 228, 228);
 }
@@ -29,55 +29,57 @@ body{
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
+}
 
-    /*menu configuration, small screen*/
-        #name-menu{
-            display: flex;
-            flex-direction: column;
-            height: 96px;
-            position: relative;
-            margin-left: 5%;
-            margin-right: 5%;
-    
-        }
-        .name{
-            text-align: left;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 32px;
-            color: #00b900;
-            margin: 0;
-        }
-        .menu-item{
-            text-align: left;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 16px;
-        }
-    
-        main{
-            display:inline-block;
-            margin:0;
-            margin-left:10%;
-            margin-right:10%;
-            position: relative;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            line-height: 30px;
-            min-height: calc(100vh - 136px);
-        
-            .about-img{
-                width: 320px;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 25px;
-            }
-            .about-text{
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-            }
-        }
-    }
-    
+/*menu configuration, small screen*/
+#name-menu {
+    display: flex;
+    flex-direction: column;
+    height: 96px;
+    position: relative;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.name {
+    text-align: left;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 32px;
+    color: #00b900;
+    margin: 0;
+}
+
+.menu-item {
+    text-align: left;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+}
+
+main {
+    display:inline-block;
+    margin:0;
+    margin-left:10%;
+    margin-right:10%;
+    position: relative;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 30px;
+    min-height: calc(100vh - 136px);
+}
+
+main .about-img {
+    width: 320px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+}
+
+main .about-text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+   
 /*footer*/
-#footer{
+#footer {
     position:sticky;
     bottom:0;
     left:0;
@@ -90,8 +92,9 @@ body{
     align-content: center;
     justify-content: center;
 }
-.logo img{
+
+footer .logo img {
     display: flex;
     height: 30px;
     margin-top: 5px;
-  }
+}
