--- a/assets/pc_style.css
+++ b/assets/pc_style.css
@@ -1,15 +1,14 @@
 
-* {
-    box-sizing: border-box;
-  }
+* { box-sizing: border-box;
+}
 
 .row::after {
     content: "";
     clear: both;
     display: table;
-  }
+}
 
-body{
+body {
     margin:0;
     background-color: rgb(229, 228, 228);
 }
@@ -28,57 +27,57 @@ body{
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
+}
 
-    #name-menu{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        height: 40px;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-    .name{
-        flex-grow: 8;
-        text-align: left;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 32px;
-        color: #00b900;
-        margin: 0;
-    }
-    .menu-item{
-        flex-grow: 0.3;
-        text-align: right;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 16px;
-    
-    }
+#name-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 40px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
 
-    main{
-        display:inline-block;
-        margin:0;
-        margin-left:10%;
-        margin-right:10%;
-        /*margin-bottom:82vh;*/
-        position: relative;
-        line-height: 30px;
-        min-height: calc(100vh - 80px);
-    
-        .about-img{
-            width: 320px;
-            float: left;
-            margin-right: 10px;
-            margin-top: 10px;
-        }
-        .about-text{
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-    }
-  }
-  
+.name {
+    flex-grow: 8;
+    text-align: left;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 32px;
+    color: #00b900;
+    margin: 0;
+}
 
+.menu-item {
+    flex-grow: 0.3;
+    text-align: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+}
+
+main {
+    display:inline-block;
+    margin:0;
+    margin-left:10%;
+    margin-right:10%;
+    /*margin-bottom:82vh;*/
+    position: relative;
+    line-height: 30px;
+    min-height: calc(100vh - 80px);
+}
+
+main .about-img {
+        width: 320px;
+        float: left;
+        margin-right: 10px;
+        margin-top: 10px;
+}
+
+main .about-text {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
 /*footer*/
-#footer{
+#footer {
     position:sticky;
     bottom:0;
     left:0;
@@ -91,8 +90,9 @@ body{
     align-content: center;
     justify-content: center;
 }
-.logo img{
+
+footer .logo img {
     display: flex;
     height: 30px;
     margin-top: 5px;
-  }
+}
