--- a/assets/pc_style.css
+++ b/assets/pc_style.css
@@ -28,14 +28,14 @@ body {
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
 
-    #name-menu {
+    /* #name-menu {
         display: flex;
         flex-direction: row;
         align-items: center;
         height: 40px;
         margin-left: 5%;
         margin-right: 5%;
-    }
+    } */
     
     .name {
         flex-grow: 8;
@@ -46,12 +46,30 @@ body {
         margin: 0;
     }
     
-    .menu-item {
+    /* .menu-item {
         flex-grow: 0.3;
         text-align: right;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 16px;
+        font-size: 16px;  
+    } */
+    
+    #menu-items {
+        box-sizing: border-box;
+        padding: 20px;
+        float: left;
+        width: 20%;
     }
+    /* .menu-home{
+        padding: 20px;
+        float: left;
+        width: 20%;
+    }
+    .menu-research{
+        padding: 20px;
+        float: left;
+        width: 20%;
+    } */
+
     
     main {
         display:inline-block;
