--- a/assets/pc_style.css
+++ b/assets/pc_style.css
@@ -43,7 +43,7 @@ body {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 32px;
         color: #00b900;
-        margin: 0;
+        margin: 20px;
     }
     
     /* .menu-item {
