--- a/assets/sytle.css
+++ b/assets/sytle.css
@@ -19,7 +19,7 @@ header {
     padding: 2em 1em;
 }
 
-header h1 {
+.name {
     font-size: 2.5em;
     font-weight: bold;
     margin-bottom: 0.2em;
@@ -32,7 +32,7 @@ header p {
 }
 
 * Navigation Bar */
-nav div {
+#menu-items {
     list-style: none;
     display: flex;
     flex-wrap: wrap; /* wrapping for small screens */
@@ -52,7 +52,7 @@ nav div {
     color: #000000;
     font-weight: bold;
     font-size: 1.1em;
-    padding: 0.5em 1em; /* Adds clickable area */
+    padding: 0.5em 1em; /* Adds clickable area
     transition: color 0.3s ease-in-out;
 } */
 
