--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(226, 226, 225);
+    background-color: #f0fff0;
     line-height: 1.8;
     margin: 0;
     padding: 0;
@@ -23,7 +23,7 @@ header {
     font-size: 2.5em;
     font-weight: bold;
     margin-bottom: 0.2em;
-    color: #00b900;
+    color: #027b02;
 }
 
 header p {
@@ -32,7 +32,7 @@ header p {
 }
 
 * Navigation Bar */
-#menu-items div {
+#menu-items {
     list-style: none;
     display: flex;
     flex-wrap: wrap; /* wrapping for small screens */
@@ -43,7 +43,7 @@ header p {
     overflow: hidden; /* no items overflow */
 }
 
-nav div {
+#menu-items div {
     display: inline;
 }
 
