--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ header {
     padding: 2em 1em;
 }
 
-.name {
+header h1 {
     font-size: 2.5em;
     font-weight: bold;
     margin-bottom: 0.2em;
@@ -32,7 +32,7 @@ header p {
 }
 
 * Navigation Bar */
-#menu-items {
+nav ul {
     list-style: none;
     display: flex;
     flex-wrap: wrap; /* wrapping for small screens */
@@ -43,23 +43,38 @@ header p {
     overflow: hidden; /* no items overflow */
 }
 
-#menu-items div {
+nav ul li {
     display: inline;
+}
+
+nav ul li a {
     text-decoration: none; /*remove underline from under menu items */
-    color: #292929;
+    color: #101010;
     font-weight: bold;
     font-size: 1.1em;
     padding: 0.5em 1em; /* add clickable area */
 }
 
-#menu-items div a:hover {
+nav ul li a:hover {
     color: #027b02; /* color change with mouse hover */
 }
 
 /* Responsive Header for Small Screens */
 @media (max-width: 768px) {
-    nav ul {
-        flex-direction: column; /* vertical navigation for small screen */
+
+    /* nav ul {
+        flex-direction: column; /* vertical navigation for small screen
         align-items: center;
-    }
+    } */
+    
+    nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 60px;
+      }
+      
+    nav ul li a {
+        display: block;
+      }
 }
