--- a/assets/style.css
+++ b/assets/style.css
@@ -65,7 +65,7 @@ main {
     display:flex;
     flex-direction:column;
     align-items:center;
-    justify-content:center;
+    /* justify-content:center; */
 }
 
 main article {
