--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 body {
@@ -60,6 +60,7 @@ nav ul li a:hover {
 main {
     /* display: inline-block; */
     line-height: 2em;
+    margin-top: 2em;
     min-height: 82dvh; /*dvh dynamic min height*/
     /* margin: 1em 1.8em 1em 1.8em; */
     display:flex;
@@ -74,11 +75,37 @@ main article {
 
 }
 
+main article .about-img {
+    display: block;
+    width: 200px;
+    float: left;
+    padding-right: 20px;
+    margin-top: 0px;
+}
+
+main article address{
+    display: block;
+    float: left;
+    margin-bottom: 1em;
+    width: 50%;
+
+}
+
+main article time{
+    display: block;
+    font-style: italic;
+    margin-bottom: 1em;
+    width: 50%;
+    float: right;
+    text-align: right;
+
+}
+
 main article p{
     margin-bottom: 0.5em; /*spacing between paragraph */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1em;
-    display: inline-block;
+    /* display: inline-block; */
     /* text-align: justify;
     text-justify: inter-word; add space between word to justify text */
 }
@@ -86,29 +113,6 @@ main article p{
 main article ol{
     margin-left: 3em;
 
-}
-
-main article address{
-    display: block;
-    float: left;
-    margin-bottom: 1em;
-
-}
-
-main article time{
-    display: block;
-    font-style: italic;
-    float: left;
-    margin-bottom: 1em;
-    margin-left: 1em;
-
-}
-
-main .about-img {
-    width: 320px;
-    float: left;
-    padding-right: 20px;
-    margin-top: 0px;
 }
 
 /*footer*/
