--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,7 @@ main article {
 
 main article .about-img {
     display: block;
-    width: 200px;
+    width: 40%;
     float: left;
     padding-right: 20px;
     margin-top: 0px;
@@ -159,5 +159,7 @@ footer img {
         float: none;
         align-items: center;
         width: 100%;
+
     }
+
 }
