--- a/assets/style.css
+++ b/assets/style.css
@@ -47,7 +47,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none; /*emove underline from under menu items */
-    color: #101010;
+    color: #4f4f4f;
     font-weight: bold;
     font-size: 1.5em;
     padding: 0.5em 1em; /* add clickable area */
@@ -81,6 +81,21 @@ main article .about-img {
     float: left;
     padding-right: 20px;
     margin-top: 0px;
+}
+
+main article img{
+    display: block;
+    width: 40%;
+    float: left;
+    padding-right: 20px;
+    margin-top: 0px;
+
+}
+
+main article h1{
+    font-size: 1.25em;
+    color: #3f5a4f;
+
 }
 
 main article address{
